--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,119 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300;6..12,400;6..12,500;6..12,600;6..12,700;6..12,800;6..12,900;6..12,1000&family=Roboto:wght@300;400;500;700;900&display=swap');
+
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+}
+
+:root {
+  --dark-color: rgba(0, 0, 0, 0.259);
+  --purple-color: rgba(128, 0, 128, 0.294);
+  --white-color: rgb(255, 255, 255);
+}
+
+body {
+  font-family: 'Nunito Sans', sans-serif;
+}
+
+/* users section */
+
+.users_container {
+  gap: 2rem;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 50%;
+  margin: 1.4rem auto;
+}
+
+.users_container,
+.users_container li,
+.users_container li .user_img,
+.user_bio {
+  display: flex;
+}
+
+.users_container a {
+  width: 100%;
+}
+
+.users_container li {
+  gap: 1.2rem;
+  width: 100%;
+}
+
+.users_container li .user_img {
+  width: 18%;
+  align-items: center;
+  height: 100px;
+  border: 2px solid var(--dark-color);
+}
+
+.user_img img {
+  width: 100%;
+  object-fit: fill;
+}
+
+.user_bio,
+.user_details,
+.user_post_comments {
+  padding: 1rem 0;
+  border: 2px solid var(--purple-color);
+}
+
+.user_details {
+  width: 100%;
+}
+
+.user_details h2 {
+  margin-left: 10%;
+}
+
+.user_details p {
+  margin-top: 0.625rem;
+  margin-left: 50%;
+  font-weight: bold;
+}
+
+.user_bio {
+  width: 100%;
+  padding-left: 2%;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 1rem;
+  text-align: start;
+}
+
+.user_recent_posts {
+  margin-left: 60%;
+  font-weight: 700;
+}
+
+.user_all_posts,
+.user_post_comments {
+  display: flex;
+  flex-direction: column;
+}
+
+.user_post_comments {
+  gap: 1.2rem;
+}
+
+.link_user_posts {
+  width: 20%;
+  padding: 0.5rem 0;
+  font-weight: 800;
+  font-size: 0.875rem;
+  text-align: center;
+  background-color: white;
+  box-shadow: 0 0  3px rgba(0, 0, 0, 0.2);
+  margin: auto;
+}
+
+.link_user_posts a:hover {
+  color: var(--purple-color);
+}
