--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,20 +1,39 @@
-<h1>list of posts for a given user </h1>
-<%= render 'shared/user', user:@user%>
- <div class="post_list">
-   <% @posts.each do |post| %>
-
-      <%= render 'shared/post', post:post %>
-
-     <% if  !post.five_most_recent_comments.empty?%>
-         <div class ="post_comment">
-     <%post.five_most_recent_comments.each do |comment| %>
-          <%= render 'shared/comment', comment:comment %>
-       <% end %>
+<ul class="users_container">
+ <%= render "shared/user_profile", user: @user %>
+  <% @posts.each_with_index do |post, index| %>
+    <%= link_to user_post_path(@user.id, post.id) do %>
+      <li class="user_all_posts">
+        <div class="user_bio">
+          <h3>Post#<%= index+1 %></h3>
+          <p><%= post.Text.size > 100 ? "#{post.Text[0..100]} ..." : post.Text %></p>
+          <div class="user_recent_posts">
+            <span>
+              Comments: <%= post.comments.count %>,
+            </span>
+            <span>
+              Likes: <%= post.Likes_counter.nil? ? '0' : post.Likes_counter %>
+            </span>
+          </div>
         </div>
-     <% end %>
-   <% end %>
+
+        <div class="user_post_comments">
+          <% if post.comments.empty? %>
+            <div class="user_post_comment">
+              <p>No comments</p>
+            </div>
+          <% else %>
+            <% post.comments[1..5].each_with_index do |comment, index| %>
+              <div class="user_post_comment">
+                <h3><%= index + 1 %>. <%= comment.user.Name %></h3>
+                <p><%= comment.Text %></p>
+              </div>
+            <% end %>
+          <% end %>
+        </div>
+      </li>
+    <% end %>
+  <% end %>
+  <div class="link_user_posts">
+    <%= link_to "Pagination", user_posts_path(user_id: @user.id) %>
   </div>
-<div class="button_holder">
-<button>Pagination</button>
-<button><%= link_to 'Back', :back %></button>
-</div>
+</ul>
