--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,20 +1,36 @@
-<h1> Post detail with comments  </h1><h1> Post detail with comments  </h1>
-<div class="post_detail">
-
-  <div class="post_detail_card">
-  <div class="post_detail_card_header">
-    <p class ="post_title"> Post <%=@post.id%> by <%=@post.author.name%></p>
-    <p>Comments: <%=@post.comments_counter%> Likes:  <%=@post.likes_counter%></p>
-  </div>
-  <div>
-    <p><%=@post.text%></p>
-  </div>
+<ul class="users_container">
+  <li class="user_all_posts">
+    <div class="user_bio">
+      <div class="post_header">
+        <h3>Posted by <%= @user.Name%></h3>
+        <div class="user_recent_posts">
+          <span>
+            Comments: <%= @post.comments.count %>,
+          </span>
+          <span>
+            Likes: <%= @post.likes.count %>
+          </span>
+        </div>
+      </div>
+      <p><%= @post.Text %></p>
     </div>
-    <% if  !@post.comments.empty?%>
-    <div class ="post_detail_comment">
-     <% @post.comments.each do |comment| %>
-       <%= render 'shared/comment', comment:comment %>
-       <% end %>
+
+    <div class="user_post_comments">
+      <% if @post.comments.empty? %>
+        <div class="user_post_comment">
+          <p>No comments</p>
+        </div>
+      <% else %>
+        <% @post.comments.each_with_index do |comment, index| %>
+          <div class="user_post_comment">
+            <h3><%= index + 1 %>. <%= comment.user.Name %></h3>
+            <p><%= comment.Text %></p>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+  </li>
+    <div class="link_user_posts">
+    <%= link_to "See all users", users_path %>
   </div>
-    <%end%>
-</div>
+</ul>
