--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,23 +1,27 @@
-<h1>A given User detail with posts</h1>
-<%= render 'shared/user', user:@user%>
+<ul class="users_container">
+ <%= render "shared/user_profile", user: @user %>
+  <div class="user_bio">
+    <h3>Bio</h3>
+    <p><%= @user.Bio %></p>
+  </div>
+  <% @user.three_most_recent_post.each_with_index do |posts, index | %>
+    <li>
+      <div class="user_bio">
+        <h3>Post#<%= index+1 %></h3>
+        <p><%= posts.Text %></p>
+        <div class="user_recent_posts">
+          <span>
+            Comments:<%= posts.Comments_counter.nil? ? '0' : posts.Comments_counter %>,
+          </span>
+          <span>
+            Likes:<%= posts.Likes_counter.nil? ? '0' : posts.Likes_counter %>
+          </span>
+        </div>
 
-<div class="user_bio">
- <h3>Bio</h3>
- <p><%= @user.bio %><p>
-</div>
-
-<div class="user_post">
-   <% @user.three_most_recent_posts.each do |post| %>
-
-      <%= render 'shared/post', post:post %>
-   <%end%>
-
-</div>
-<div class="button_holder">
-<button>
- <%= link_to 'See all posts', "#{@user.id}/posts" %>
-</button>
-<button>
- <%= link_to 'Back', :back %>
-</button>
-</div>
+      </div>
+    </li>
+  <% end %>
+  <div class="link_user_posts">
+    <%= link_to "See all posts", user_posts_path(user_id: @user.id) %>
+  </div>
+</ul>
