--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,13 +5,13 @@
       <li class="user_all_posts">
         <div class="user_bio">
           <h3>Post#<%= index+1 %></h3>
-          <p><%= post.Text.size > 100 ? "#{post.Text[0..100]} ..." : post.Text %></p>
+          <p><%= post.text.size > 100 ? "#{post.text[0..100]} ..." : post.text %></p>
           <div class="user_recent_posts">
             <span>
               Comments: <%= post.comments.count %>,
             </span>
             <span>
-              Likes: <%= post.Likes_counter.nil? ? '0' : post.Likes_counter %>
+              Likes: <%= post.likes_counter.nil? ? '0' : post.likes_counter %>
             </span>
           </div>
         </div>
@@ -25,7 +25,7 @@
             <% post.comments[1..5].each_with_index do |comment, index| %>
               <div class="user_post_comment">
                 <h3><%= index + 1 %>. <%= comment.user.Name %></h3>
-                <p><%= comment.Text %></p>
+                <p><%= comment.text %></p>
               </div>
             <% end %>
           <% end %>
