--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,7 @@
   <li class="user_all_posts">
     <div class="user_bio">
       <div class="post_header">
-        <h3>Posted by <%= @user.Name%></h3>
+        <h3>Posted by <%= @user.name%></h3>
         <div class="user_recent_posts">
           <span>
             Comments: <%= @post.comments.count %>,
@@ -12,7 +12,7 @@
           </span>
         </div>
       </div>
-      <p><%= @post.Text %></p>
+      <p><%= @post.text %></p>
     </div>
 
     <div class="user_post_comments">
@@ -24,7 +24,7 @@
         <% @post.comments.each_with_index do |comment, index| %>
           <div class="user_post_comment">
             <h3><%= index + 1 %>. <%= comment.user.Name %></h3>
-            <p><%= comment.Text %></p>
+            <p><%= comment.text %></p>
           </div>
         <% end %>
       <% end %>
