--- a/app/views/shared/_user_profile.html.erb
+++ b/app/views/shared/_user_profile.html.erb
@@ -1,9 +1,9 @@
 <li>
   <div class="user_img">
-    <img src="<%= user.Photo %>" alt="Photo">
+    <img src="<%= user.photo %>" alt="Photo">
   </div>
   <div class="user_details">
-    <h2><%= user.Name %></h2>
-    <p>Number of Posts: <%= user.Posts_counter.nil? ? '0' : user.Posts_counter %></p>
+    <h2><%= user.name %></h2>
+    <p>Number of Posts: <%= user.post_counter.nil? ? '0' : user.post_counter %></p>
   </div>
 </li>
