--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,19 +2,19 @@
  <%= render "shared/user_profile", user: @user %>
   <div class="user_bio">
     <h3>Bio</h3>
-    <p><%= @user.Bio %></p>
+    <p><%= @user.bio %></p>
   </div>
-  <% @user.three_most_recent_post.each_with_index do |posts, index | %>
+  <% @user.three_most_recent_posts.each_with_index do |posts, index | %>
     <li>
       <div class="user_bio">
         <h3>Post#<%= index+1 %></h3>
-        <p><%= posts.Text %></p>
+        <p><%= posts.text %></p>
         <div class="user_recent_posts">
           <span>
-            Comments:<%= posts.Comments_counter.nil? ? '0' : posts.Comments_counter %>,
+            Comments:<%= posts.comments_counter.nil? ? '0' : posts.comments_counter %>,
           </span>
           <span>
-            Likes:<%= posts.Likes_counter.nil? ? '0' : posts.Likes_counter %>
+            Likes:<%= posts.likes_counter.nil? ? '0' : posts.likes_counter %>
           </span>
         </div>
 
