All test passed: :All post can be listed

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,4 @@
+<h1 class="users_container">Here is a list of users</h1>
 <ul class="users_container">
   <% @users.each do |user| %>
     <%= link_to user_path(user.id) do %>
