--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<h1 class="users_container">Displays bio data of a given user</h1>
 <ul class="users_container">
  <%= render "shared/user_profile", user: @user %>
   <div class="user_bio">
