--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,4 @@
+<h1 class="users_container">Here is a list of posts for a given user</h1>
 <ul class="users_container">
  <%= render "shared/user_profile", user: @user %>
   <% @posts.each_with_index do |post, index| %>
@@ -5,7 +6,7 @@
       <li class="user_all_posts">
         <div class="user_bio">
           <h3>Post#<%= index+1 %></h3>
-          <p><%= post.text.size > 100 ? "#{post.text[0..100]} ..." : post.text %></p>
+          <p><%=post.text&.size.to_i > 100 ? "#{post.text[0..100]} ..." : post.text %></p>
           <div class="user_recent_posts">
             <span>
               Comments: <%= post.comments.count %>,
@@ -24,7 +25,7 @@
           <% else %>
             <% post.comments[1..5].each_with_index do |comment, index| %>
               <div class="user_post_comment">
-                <h3><%= index + 1 %>. <%= comment.user.Name %></h3>
+                <h3><%= index + 1 %>. <%= comment.user.name %></h3>
                 <p><%= comment.text %></p>
               </div>
             <% end %>
