--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,4 @@
+<h1 class="users_container">Displays selected post by an given user</h1>
 <ul class="users_container">
   <li class="user_all_posts">
     <div class="user_bio">
@@ -23,7 +24,7 @@
       <% else %>
         <% @post.comments.each_with_index do |comment, index| %>
           <div class="user_post_comment">
-            <h3><%= index + 1 %>. <%= comment.user.Name %></h3>
+            <h3><%= index + 1 %>. <%= comment.user.name %></h3>
             <p><%= comment.text %></p>
           </div>
         <% end %>
