--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -60,7 +60,8 @@ body {
 
 .user_bio,
 .user_details,
-.user_post_comments {
+.user_post_comments,
+form {
   padding: 1rem 0;
   border: 2px solid var(--purple-color);
 }
@@ -104,7 +105,11 @@ body {
 }
 
 .link_user_posts {
-  width: 20%;
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
   padding: 0.5rem 0;
   font-weight: 800;
   font-size: 0.875rem;
@@ -116,4 +121,63 @@ body {
 
 .link_user_posts a:hover {
   color: var(--purple-color);
+}
+
+.link_user_posts .like_form {
+  width: 50%;
+}
+
+.like_form .like_btn,
+.submit_btn {
+  border: none;
+  outline: none;
+  width: 80%;
+  padding: 0.5rem;
+  border-radius: 5px;
+  background: linear-gradient(to right, rgb(6, 2, 79, 0.6), rgba(6, 2, 90, 0.5), rgba(6, 2, 90, 0.5));
+}
+
+.submit_btn {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  font-size: 20px;
+  margin: auto;
+}
+
+.like_form .like_btn:hover,
+.submit_btn:hover {
+  background: rgba(1, 53, 106, 0.667);
+  color: var(--white-color);
+  transform: scale(0.99);
+}
+
+form {
+  width: 60%;
+  margin: auto;
+}
+
+form .form_input,
+form label,
+form textarea {
+  display: flex;
+  justify-content: center;
+  width: 50%;
+  margin: auto;
+}
+
+form .form_input {
+  height: 40px;
+  padding: 10px;
+}
+
+form textarea {
+  height: 100px;
+  padding: 10px;
+}
+
+body h1 {
+  text-align: center;
 }
