--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,4 +25,7 @@
   <div class="link_user_posts">
     <%= link_to "See all posts", user_posts_path(user_id: @user.id) %>
   </div>
+  <div class="link_user_posts">
+    <%= link_to "Create post", user_posts_path(user_id: @user.id) %>
+  </div>
 </ul>
