--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,6 +4,8 @@
     <div class="user_bio">
       <div class="post_header">
         <h3>Posted by <%= @user.name%></h3>
+        <h2><%= @post.title %></h2>
+        <p><%= @post.text %></p>
         <div class="user_recent_posts">
           <span>
             Comments: <%= @post.comments.count %>,
@@ -12,6 +14,12 @@
             Likes: <%= @post.likes.count %>
           </span>
         </div>
+        <% if current_user.present? %>
+          <div class="post-actions">
+            <%= button_to "Like", user_post_path(@user, @post), method: :post, remote: true %>
+            <%= button_to "Unlike", user_post_path(@user, @post), method: :delete, remote: true %>
+          </div>
+        <% end %>
       </div>
       <p><%= @post.text %></p>
     </div>
@@ -24,12 +32,21 @@
       <% else %>
         <% @post.comments.each_with_index do |comment, index| %>
           <div class="user_post_comment">
-            <h3><%= index + 1 %>. <%= comment.user.name %></h3>
+            <h3><%= index + 1 %> <%= comment.user.name %></h3>
             <p><%= comment.text %></p>
           </div>
+          <% if can?(:delete, comment) %>
+            <%= link_to 'Delete', user_post_path(@user, @post, comment), data: { turbo_method: :delete, confirm: 'Are you sure?'} %>
+          <% end %>
         <% end %>
       <% end %>
+      <a href="<%= user_post_path(@user, @post) %>">
+        <button id="back-btn">Add a comment</button>
+      </a>
     </div>
+    <% if can?(:delete, @post) %>
+      <%= link_to 'Delete', user_post_path(@user, @post), data: { turbo_method: :delete, confirm: 'Are you sure?' } %>
+    <% end %>
   </li>
     <div class="link_user_posts">
     <%= link_to "See all users", users_path %>
