--- a/app/views/shared/_user_profile.html.erb
+++ b/app/views/shared/_user_profile.html.erb
@@ -3,6 +3,7 @@
     <img src="<%= user.photo %>" alt="Photo">
   </div>
   <div class="user_details">
+    <h2><%= user.role %></h2>
     <h2><%= user.name %></h2>
     <p>Number of Posts: <%= user.post_counter.nil? ? '0' : user.post_counter %></p>
   </div>
